# agentgatewaygastown

./: .devcontainer.json  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile  buf.gen.ts.yaml  buf.gen.yaml
.github/workflows/: pull_request.yml
crates/agentgateway/: Cargo.toml  build.rs
crates/agentgateway/benches/: bench_tests.rs
crates/agentgateway/proto/: registry.proto  resource.proto
crates/agentgateway/src/: claimcheck.rs  config.rs  lib.rs  state_manager.rs  stateful.rs
crates/core/src/: drain.rs  signal.rs
demo/: agentgateway-demo.yaml
demo/registries/: registry_sample.json  showcase.json
docs/: AGENTS.md  ALIGNMENT_WITH_AGENTGATEWAY.md  ARCHITECTURE_DISCONNECTS.md  DESIGN_STATEFUL_PATTERNS.md  DESIGN_TS_TO_RUNTIME.md  TESTING-OUTPUT-TRANSFORM.md  agent-identity.md  mcp-algebra-ala-camel.md  registry-v2-presentation.html  virtual-tools-presentation.html  virtual-tools.md  vmcp-short-slides.html
docs/architecture/: modules-after.mmd  modules-before.mmd  modules-diff.mmd  runtime-flow.mmd  sequence-saga-compensation.mmd  sequence-tool-invocation.mmd
docs/design/: README.md  code-walkthrough.md  composition-test-plan.md  fastmcp-transforms-comparison.md  proto-codegen-migration.md  quickstart.md  registry-v2-work-packages.md  registry-v2.md  saga-pattern.md  virtual-tools-vision.md
docs/design/archive/: dag-executor.md  ecommerce-service-separation.md  registry-integration.md  registry-v2-work-packages.md  (+1 more)
examples/: README.md
examples/agents/langgraph_agent/: .gitignore  README.md  __init__.py  __main__.py  agent.py  mcp_client.py  pyproject.toml  tools.py  visualization.py
examples/ecommerce-demo/: .gitignore  DEMO_GUIDE.md  ECOMMERCE_TESTING_STATUS.md  Makefile  README.md  list_gateway_tools.py  pyproject.toml  start_services.sh  stop_services.sh  test_integration.py
examples/ecommerce-demo/agents/customer_agent/: __init__.py  __main__.py  agent.py
examples/ecommerce-demo/agents/merchandiser_agent/: __init__.py  __main__.py  agent.py
examples/ecommerce-demo/agents/shared/: __init__.py  a2a_server.py  gateway_client.py
examples/ecommerce-demo/data/: generate_synthetic.py  seed_data.py
examples/ecommerce-demo/gateway-configs/: config.yaml  config_with_schemas.yaml  ecommerce_registry.json  ecommerce_registry.ts  ecommerce_registry_v2.json  ecommerce_registry_v2_with_schemas.json
examples/ecommerce-demo/mcp_tools/: __init__.py
examples/ecommerce-demo/mcp_tools/cart_service/: __init__.py  database.py  server.py
examples/ecommerce-demo/mcp_tools/catalog_service/: __init__.py  database.py  server.py
examples/ecommerce-demo/mcp_tools/inventory_service/: __init__.py  database.py  server.py
examples/ecommerce-demo/mcp_tools/order_service/: __init__.py  database.py  server.py
examples/ecommerce-demo/mcp_tools/shared/: __init__.py  db_utils.py  http_runner.py  models.py
examples/ecommerce-demo/mcp_tools/supplier_service/: __init__.py  database.py  server.py
examples/ecommerce-demo/web_ui/: chat_app.py  components.py
examples/ecommerce-demo/web_ui/static/: style.css
examples/modal-perf/: .gitignore  README.md  pyproject.toml
examples/modal-perf/src/: __init__.py  __main__.py  client.py  modal_app.py
examples/modal-perf/src/patterns/: __init__.py  a2a.py  mcp.py
examples/modal-perf/tests/: __init__.py  test_client.py
examples/pattern-demos/: .gitignore  DEMO_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  run_demo.py  start_gateway.sh  start_mcp_services.sh  stop_mcp_services.sh
examples/pattern-demos/a2a/agents/adk-specialist/: __init__.py  __main__.py  pyproject.toml
examples/pattern-demos/a2a/agents/claude-delegator/: __init__.py  __main__.py  pyproject.toml
examples/pattern-demos/a2a/agents/langgraph-processor/: __init__.py  __main__.py  pyproject.toml
examples/pattern-demos/agents/claude_agent/: .gitignore  README.md  __init__.py  __main__.py  agent.py  config.yaml  pyproject.toml
examples/pattern-demos/agents/google_adk_agent/: .gitignore  README.md  __init__.py  __main__.py  agent.py  config.yaml  gateway_tools.py  pyproject.toml
examples/pattern-demos/mcp-tools/document_service/: README.md  config.yaml  pyproject.toml
examples/pattern-demos/mcp-tools/document_service/document_service/: __init__.py  __main__.py  chunking.py  database.py  embeddings.py  server.py
examples/pattern-demos/mcp-tools/notification_service/: README.md  config.yaml  pyproject.toml  server.py
examples/pattern-demos/mcp-tools/task_service/: .gitignore  README.md  config.yaml  pyproject.toml  server.py
examples/pattern-demos/mcp-tools/task_service/task_service/: __init__.py  __main__.py  db.py  models.py  server.py
examples/pattern-demos/mcp-tools/user_service/: README.md  pyproject.toml  server.py
examples/research-assistant-demo/: .env.example  README.md  pyproject.toml  start_services.sh  stop_services.sh
examples/research-assistant-demo/agents/: __init__.py
examples/research-assistant-demo/agents/research_agent/: __init__.py  __main__.py  agent.py
examples/research-assistant-demo/agents/shared/: llm_config.py
examples/research-assistant-demo/data/: seed_data.py
examples/research-assistant-demo/gateway-configs/: config.yaml  research_registry.json
examples/research-assistant-demo/mcp_tools/: __init__.py
examples/research-assistant-demo/mcp_tools/category_service/: __init__.py  __main__.py  database.py  server.py
examples/research-assistant-demo/mcp_tools/entity_service/: __init__.py  __main__.py  database.py  server.py
examples/research-assistant-demo/mcp_tools/fetch_service/: __init__.py  __main__.py  server.py
examples/research-assistant-demo/mcp_tools/search_service/: __init__.py  __main__.py  server.py
examples/research-assistant-demo/mcp_tools/shared/: __init__.py  db_utils.py  embeddings.py  http_runner.py
examples/research-assistant-demo/mcp_tools/tag_service/: __init__.py  __main__.py  database.py  server.py
modal/: README.md  modal_app.py  modal_app_prebuilt.py  requirements.txt
modal/examples/: basic_config.yaml
scripts/: validate-registry-schemas.py
(+126 files in other folders)
