[project]
name = "document-service"
version = "0.1.0"
description = "SQLite-backed MCP document service with semantic search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
document-service = "document_service.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["document_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
