[project]
name = "mcp-task-service"
version = "0.1.0"
description = "SQLite-backed MCP task/todo service demonstrating CRUD operations and saga patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-task-service = "task_service:main"

[tool.hatch.build.targets.wheel]
packages = ["task_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
