[project]
name = "user-service-mcp"
version = "0.1.0"
description = "SQLite-backed MCP user/profile service with vector search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.1",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
user-service-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
