[project]
name = "claude-delegator"
version = "0.1.0"
description = "Claude-style orchestrator agent that delegates to specialized agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
